Helper file for http request created finished addEvent implementation created seperate functions to get sku_code, make all API calls, and argument data with additional information also implemented a getHistory function ready for other endpoints tested functionality with product-view type, and multiple transactional type products
